# cognetics-dataassist-skill-rl

./: .env.example  Makefile  README.md  pyproject.toml
app/: __init__.py  config.py  dependencies.py  main.py  models.py  schemas.py
app/adapters/: __init__.py  base.py  connector_engine_adapter.py  mock.py  registry.py  starburst_trino_adapter.py  trino_adapter.py
app/adk/: __init__.py  model_provider.py  postgres_memory_service.py  retry.py  runtime.py  skillsql_runner.py
app/agents/: __init__.py
app/core/: events.py  policy.py  sql_utils.py  store.py
app/observability/: __init__.py  logging.py
app/services/: auth.py  backend_metadata_sync.py  catalog.py  data_usage_nlp.py  directory.py  discovery.py  discovery_catalog_loader.py  embeddings.py  query_to_nlp.py
data/: data_assist.db
data-assist-frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
data-assist-frontend/src/: App.tsx  main.tsx  styles.css  types.ts
scripts/: build_catalog.py  check_training_env.py  init_databases.sql  plot_results.py  pull_models.sh  run_benchmark.py  train_grpo.py
skillsql/: __init__.py  cli.py  resources.py
skillsql/agents/: __init__.py  _adk.py
skillsql/benchmark/: __init__.py  run_benchmark.py  spider2_loader.py
skillsql/catalog/: __init__.py  builder.py  embeddings.py  models.py  repository.py  source_resolver.py  sync.py
skillsql/config/: __init__.py  env_loader.py  settings.py
skillsql/connectors/: __init__.py  base.py  factory.py  oracle_connector.py  postgres_connector.py  snowflake_connector.py  (+1 more)
sql/: catalog_schema.sql
tests/: _fakes.py  conftest.py  test_adk_retry.py  test_adk_session_db_url.py  test_catalog_build_request.py  test_catalog_build_scoped.py  test_catalog_query_history_routes.py  test_catalog_repository_scope.py  test_catalog_sync.py  test_cli.py  test_column_description_sampling.py  test_connector_engine_adapter.py  test_connectors.py  test_context_query_history.py  test_equivalence.py  test_generate_context.py  test_grpo_artifacts.py  test_live_feedback_skills.py  test_model_provider.py  test_obligations.py  test_policy_update.py  test_query_run_live_feedback_store.py  test_reward.py  test_rl_async_reward_sync.py  test_skillsql_model_provider.py  test_skillsql_workflow_nodes.py  test_source_groups.py  test_source_resolver.py  test_starburst_name_lookup.py  test_static_gates.py  test_training_context_builder.py
(+72 files in other folders)
