[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognetics-dataassist-skill-rl"
version = "0.2.0"
description = """
SkillSQL-RL: Recursive Skill-Augmented Reinforcement Learning for Enterprise Text-to-SQL.
Unified codebase combining the FastAPI data-assist service with the SkillSQL-RL inference
and training framework on Google ADK 2.0.
"""
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Cognetics" }]

dependencies = [
  # --- Web framework ---
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",

  # --- Agent / workflow runtime ---
  "google-adk>=2.0.0",
  "litellm>=1.65.5",
  "google-genai>=1.0.0",

  # --- Datasources ---
  "snowflake-connector-python>=3.12",
  "trino>=0.329",                        # Starburst / Trino
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.2",
  "asyncpg>=0.29",
  "pgvector>=0.3.0",
  "aiosqlite>=0.20",                     # SQLite dev/test backend

  # --- SQL parsing / verification ---
  "sqlglot>=25.0",

  # --- Config / settings ---
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-dotenv>=1.0",

  # --- Observability ---
  "structlog>=24.1",

  # --- HTTP / retry ---
  "httpx>=0.27",
  "tenacity>=8.3",

  # --- CLI ---
  "typer>=0.12",

  # --- Embeddings (Vertex AI) ---
  "google-cloud-aiplatform>=1.57",

  # --- Utilities ---
  "numpy>=1.26",
  "pandas>=2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
  "httpx>=0.27",               # test client
]
training = [
  # vLLM / verl for the GRPO training track (heavy; GPU required).
  # Install separately: pip install vllm verl
  "datasets>=2.20",
  "transformers>=4.42",
  "accelerate>=0.30",
]
plotting = [
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "scipy>=1.13",
]

[project.scripts]
skillsql   = "skillsql.cli:app"
dataassist = "app.main:start"

[tool.hatch.build.targets.wheel]
packages = ["app", "skillsql"]

[tool.pytest.ini_options]
pythonpath = [".", "tests"]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "skillsql", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
